# shev

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  justfile
backend/: Cargo.toml  shev.example.json
backend/src/: api.rs  config.rs  consumer.rs  db.rs  executor.rs  main.rs  middleware.rs  models.rs  producer.rs  queue.rs  store.rs
cli/: Cargo.toml
cli/src/: db.rs  main.rs
cli/src/commands/: config.rs  event.rs  handler.rs  job.rs  mod.rs  schedule.rs  timer.rs
core/: Cargo.toml
core/src/: api.rs  db.rs  lib.rs  models.rs
ui/: package-lock.json  package.json
ui/src/: app.css
ui/src/lib/: api.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/events/: +page.svelte
ui/src/routes/handlers/: +page.svelte
ui/src/routes/jobs/: +page.svelte
ui/src/routes/jobs/[id]/: +page.svelte
ui/src/routes/schedules/: +page.svelte
ui/src/routes/timers/: +page.svelte
