[workspace]
members = ["backend", "cli", "core"]
resolver = "3"

[workspace.dependencies]
# Internal
shev-core = { path = "core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.13", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
