[package]
name = "shev-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
shev-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
uuid.workspace = true
chrono.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
