[package]
name = "shev-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shev"
path = "src/main.rs"

[dependencies]
shev-core = { path = "../core" }
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
