[package]
name = "shev-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shev"
path = "src/main.rs"

[dependencies]
shev-core.workspace = true
clap.workspace = true
chrono.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
