[package]
name = "shev-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
reqwest.workspace = true
url.workspace = true
serde_repr.workspace = true
utoipa.workspace = true
